--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,27 +1,29 @@
-<!DOCTYPE html>
+{%extends 'bootstrap/base.html' %}
 
-
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
+{%block title%}
     {%if title%}
-    <title>{{ title }} - Sample Project</title>
+    {{ title }} - Sample Project
     {%else%}
-    <title>Sample - Home Page</title>
+    Sample - Home Page
     {%endif%}
-    <link rel="stylesheet" href="..static/css/main.css">
-  </head>
-  <body>
-    <header>
-      <nav>
-        <ul>
-          <li><a href="/index">Home</a></li>
-          <li><a href="/posts">Posts</a></li>
-        </ul>
-      </nav>
-    </header>
-    {%block content%}
-    {%endblock%}
-  </body>
+{%endblock%}
 
-</html>
+{%block styles%}
+  {{ super() }}
+  <!-- grabs all the block stylings from bootstrap (it's a jinja thing) -->
+  <link rel="stylesheet" href="..static/css/main.css">
+{%endblock%}
+
+{%block navbar%}
+  <ul>
+    <li><a href="/index">Home</a></li>
+    <li><a href="/posts">Posts</a></li>
+  </ul>
+{%endblock%}
+
+
+
+{%block content%}
+  {%block app_content%}
+  {%endblock%}
+{%endblock%}
