--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,9 +1,9 @@
 {%extends 'base.html'%}
 
 
-{%block content%}
+{%block app_content%}
   <body>
-    <h1>Hello, {{user.username}}!</h1>
+    <h1>Hello, {{name}}!</h1>
     <h3>2 + 2 = {{num}}</h3>
   </body>
 {%endblock%}
