End of Monday's lesson

--- a/app/templates/posts.html
+++ b/app/templates/posts.html
@@ -1,5 +1,9 @@
 {%extends 'base.html'%}
 
+{%block title%}
+Posts - {{ super() }}
+{%endblock%}
+
 
 {%block app_content%}
 <h1>Below are some posts:</h1>
