--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,29 +1,28 @@
 {%extends 'bootstrap/base.html' %}
 
 {%block title%}
-    {%if title%}
-    {{ title }} - Sample Project
-    {%else%}
-    Sample - Home Page
-    {%endif%}
+  My Project
+{%endblock%}
+
+
+{%block navbar%}
+<div class="navbar navbar-inverse">
+  <ul class="nav navbar-nav">
+    <li class="active"><a href="#" class="nav-item nav-link">Home</a></li>
+    <li><a href="#" class="nav-item nav-link">Page 1</a></li>
+    <li><a href="#" class="nav-item nav-link">Page 2</a></li>
+    <li><a href="#" class="nav-item nav-link">Page 3</a></li>
+  </ul>
+</div>
+{%endblock%}
+
+{%block content%}
+  {%block app_content%}
+  {%endblock%}
 {%endblock%}
 
 {%block styles%}
   {{ super() }}
   <!-- grabs all the block stylings from bootstrap (it's a jinja thing) -->
   <link rel="stylesheet" href="..static/css/main.css">
-{%endblock%}
-
-{%block navbar%}
-  <ul>
-    <li><a href="/index">Home</a></li>
-    <li><a href="/posts">Posts</a></li>
-  </ul>
-{%endblock%}
-
-
-
-{%block content%}
-  {%block app_content%}
-  {%endblock%}
 {%endblock%}
