--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,9 +1,12 @@
 {%extends 'base.html'%}
 
+{%block title%}
+Home - {{ super() }}
+{%endblock%}
 
 {%block app_content%}
   <body>
     <h1>Hello, {{name}}!</h1>
-    <h3>2 + 2 = {{num}}</h3>
+    <h3 class='pull-right'>2 + 2 = {{num}}</h3>
   </body>
 {%endblock%}
