--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,7 +6,7 @@ Home - {{ super() }}
 
 {%block app_content%}
   <body>
-    <h1>Hello, {{name}}!</h1>
+    <h1>Hello, {{user.username}}!</h1>
     <h3 class='pull-right'>2 + 2 = {{num}}</h3>
   </body>
 {%endblock%}
