Added login/passwords for users and they can make posts now

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,6 +5,7 @@
 {%endblock%}
 
 
+
 {%block navbar%}
 <div class="navbar navbar-inverse">
   <ul class="nav navbar-nav">
@@ -17,6 +18,11 @@
       <li><a href="{{url_for('logout')}}" >Logout</a></li>
     {%endif%}
   </ul>
+  {% if current_user.is_authenticated%}
+  <p class="navbar-text pull-right">
+    Hi {{current_user.username}}!
+  </p>
+  {%endif%}
 </div>
 {%endblock%}
 
