--- a/app/templates/posts.html
+++ b/app/templates/posts.html
@@ -1,11 +1,22 @@
 {%extends 'base.html'%}
+{% import 'bootstrap/wtf.html' as wtf%}
 
 {%block title%}
 Posts - {{ super() }}
 {%endblock%}
 
 
+
 {%block app_content%}
+<div class="row">
+  <div class="col-md-4 col-md-offset-4"></div>
+  <h1>Write a new post!</h1>
+
+    {{wtf.quick_form(form)}}
+</div>
+<div class="row">
+  <div class="col-md-4 col-md-offset-4"></div>
+</div>
 <h1>Below are some posts:</h1>
   {%for p in posts%}
 
